--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -20,6 +20,7 @@
             android:id="@+id/left_chat_text_view"
             android:textSize="18sp"
             android:gravity="start"
+            android:textIsSelectable="true"
             />
     </LinearLayout>
     <LinearLayout
